[package]
name = "skipper"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI commander"
repository = "https://github.com/frazerk/skipper"
readme = true

[dependencies]
boxed = { path = "./boxed" }
boxed_btree = { path = "./boxed_btree" }
boxed_sorted = { path = "./boxed_sorted" }
boxed_vec = { path = "./boxed_vec" }
tree = { path = "./tree" }

[workspace]
members = [
	"boxed",
	"boxed_btree",
	"boxed_sorted",
	"boxed_vec",
	"tree",
]

[features]

[dev-dependencies]
clap = { version = "3.1.6", features = ["derive", "cargo"] }
